# thug-lang

./: .claudiaideconfig  CMakeLists.txt  README.md
thug-lang/: CMakeLists.txt  example.txt  thug-lang.cpp  thug-lang.h
thug-lang/src/Types/: types.h
thug-lang/src/parser/: parser.cpp  parser.h
thug-lang/src/test/: test.cpp
thug-lang/src/tokenizer/: chunks.cpp  chunks.h  tokenizer.cpp  tokenizer.h
thug-lang/src/utils/: string_util.cpp  string_util.h
